--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dgly4m+9n82r6/IH0rFYGiRh2esJU+PrgvPhOEV3Vck=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -10,7 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mariadb
-DB_HOST=127.0.0.1
+DB_CONNECTION=mysql
+DB_HOST=mysql-services
 DB_PORT=3306
-DB_DATABASE=signature
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=signture
+DB_USERNAME=signature
+DB_PASSWORD=signature
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
